Fix wrapping of long lines in pre blocks
As mentioned in this Reddit comment [1], the release post looked a bit
odd on mobile devices. This was due to a few very long lines in code
blocks not getting wrapped properly. Apparently the use of CSS grids
means overflowing is handled differently, and to fix that the grid items
must have a minimum width of zero [2]. Because that makes total sense.

[1]: https://www.reddit.com/r/inko/comments/13lzqdx/inko_0110_released_including_a_native_code/jkumajx/
[2]: https://stackoverflow.com/questions/43311943/prevent-content-from-expanding-grid-items

--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -92,7 +92,7 @@ pre {
   line-height: 1.3;
   margin: 0 0 $text-bottom-margin $text-left-margin;
   overflow-x: auto;
-  white-space: pre-wrap;
+  white-space: pre;
 }
 
 p code,
@@ -167,6 +167,10 @@ table {
   margin: 0 auto;
   max-width: 940px;
   padding: 0 10px;
+}
+
+.grid > * {
+  min-width: 0;
 }
 
 // Bar at the top, containing the logo and navigation menu.
